--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,6 @@ gradleVersion = 7.4
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
+
+org.gradle.parallel=true
+org.gradle.jvmargs='-Dfile.encoding=UTF-8'
