--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,12 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
-<idea-plugin>
+
+<!-- `url` specifies the URL of the plugin homepage (can be opened from "Plugins" settings dialog) -->
+<idea-plugin url="https://github.com/twistedbytes-net/rider-unreal_genproj#readme">
     <id>net.twistedbytes.rider.plugins.unreal_genproj</id>
+
+    <!--suppress PluginXmlCapitalization -->
     <name>Unreal GenProj</name>
+
     <vendor
             email="support@twistedbytes.net"
             url="https://twistedbytes.net"
@@ -24,39 +29,5 @@
             <add-to-group group-id="RightToolbarSideGroup" anchor="first"/>
         </action>
     </actions>
-
-    <change-notes>
-    <![CDATA[
-        <p>
-            <div>
-                <h4>Version 1.0.3</h4>
-                <ul>
-                  <li>Removed: Plugin deprecation for newer versions of Rider.</li>
-              </ul>
-            </div>
-            <div>
-                <h4>Version 1.0.2</h4>
-                <ul>
-                  <li>Changed: The "Generate" button will be disabled during IDE startup phase.</li>
-                  <li>Changed: The "Generate" button will be disabled while generating project files.</li>
-                  <li>Fixed: Clicking the "Generate" button will no longer freeze the UI.</li>
-                  <li>Removed: Plugin deprecation for newer versions of Rider.</li>
-              </ul>
-            </div>
-            <div>
-                <h4>Version 1.0.1</h4>
-                <ul>
-                  <li>Fixed: Docs</li>
-              </ul>
-            </div>
-            <div>
-                <h4>Version 1.0.0</h4>
-                <ul>
-                  <li>Initial release</li>
-              </ul>
-            </div>
-        </p>
-    ]]>
-    </change-notes>
 
 </idea-plugin>
