--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,13 @@ pluginVersion = 1.0.3
 pluginSinceBuild = 211
 pluginUntilBuild =
 
+# Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
+# See https://jb.gg/intellij-platform-builds-list for available build versions.
+pluginVerifierIdeVersions = 2021.1.3, 2021.2.3, 2021.3
+
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = RD
-platformVersion = 2021.3.3
+platformVersion = 2021.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
